--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
-  "devDependencies": {    
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
